fix: hero position on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -39,3 +39,9 @@ main .hero img {
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 900px) {
+    main .hero img {
+        object-position: 45% center;
+    }
+}
